--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ant-design/pro-layout": "^6.5.0",
     "@umijs/preset-react": "1.x",
     "antd": "^4.15.1",
+    "echarts": "^5.1.0",
     "moment": "^2.29.1",
     "umi": "^3.4.8"
   },
