--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@umijs/preset-react": "1.x",
     "antd": "^4.15.1",
     "echarts": "^5.1.0",
+    "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "umi": "^3.4.8"
   },
